--- a/package.json
+++ b/package.json
@@ -22,10 +22,23 @@
   "dependencies": {
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
+    "@nestjs/graphql": "^6.5.4",
+    "@nestjs/mongoose": "^6.3.1",
     "@nestjs/platform-express": "^6.7.2",
+    "apollo-server-core": "^2.10.1",
+    "apollo-server-express": "^2.10.1",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
+    "deep-map": "^2.0.0",
+    "graphql": "^14.6.0",
+    "graphql-iso-date": "^3.6.1",
+    "graphql-tools": "^4.0.6",
+    "mongoose": "^5.9.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "sanitize-html": "^1.21.1",
+    "type-graphql": "^0.17.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
@@ -33,6 +46,7 @@
     "@nestjs/testing": "^6.7.1",
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
+    "@types/mongoose": "^5.7.1",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
