--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "deep-map": "^2.0.0",
+    "firebase-admin": "^8.9.2",
     "graphql": "^14.6.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-tools": "^4.0.6",
