--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^6.7.2",
+    "@nestjs/config": "^0.2.4",
     "@nestjs/core": "^6.7.2",
     "@nestjs/graphql": "^6.5.4",
     "@nestjs/mongoose": "^6.3.1",
